Conf-AmonNG
26/11/08 (sam)
- rvp : correction bug 953. test de l'existance du pid au moment du stop.
 
26/11/08
- dans le template hosts : verifie si nom_dmz n'est pas définit (spécifique amonecole/eolevz)

06/11/08
- ne verifie plus la presence du fichier qoseole.conf a l'arret. Permet d'arreter qoseole si on ne l'utilise plus
- parametres ldap pour nufw rendu obligatoire dans le dico si nufw actif.

30/10/08
- ajout de src_noauth et src_nocache

29/10/08 (sam)
- ajout conf pour chkrootkit

9/10/08 (sam)
- squid.conf : remodification des acl reserved (myport fonctionne pas)

06/10/2008
- domain_noauth : ajout de .archive.ubuntu.com
- squid.conf : ajout du port 4200 dans les port reservé + modif acl reserved (passage de port à myport)

2/10/2008 (sam)
- dico + squid.conf : gestion de l'authentification en fonction des interfaces
 
01/10/2008
- support de certs_nuauth (key_nuauth, cert_nuauth, cacert_nuauth) pour les certifications nuauth

30/09/2008:
- dicos/3_dansguardian.xml : ajout de configuration separee pour les zones 1 et 2 de dansguardian
- tmpls/dansguardian1 et 2.conf : fichier separe par zone (lie a la modification du 30/09/2008 de amon-backend)
- tmpl/spcl.options : support de la carte "dmz" pour amonecole
- eole/gen_dns : ajoute le support d'amonecole


24/09/2008
- eole/amon-postupgrade : test sur la version NG de départ pour l'upgrade des configs dansguardian

18/09/08 (sam)
- ajout d'un dico pour la gestion des routes statiques + fichier static-routes en templates

8/09/08 (sam)
- interface : 	- ajout paramètres gateway au niveau vlan et alias eth0 pour multi-routeur
		- alias interface completement parametrable

15/07/2008
- changement de syslog-ng par rsyslog
- ajout du dictionnaire 1_logs.xml

09/06/2008
- squid.conf: ajout d'un deuxieme fichiers (utilisateur) pour les noauth et nocache
- prereconf: ajout d'un touch vers les deux fichiers domaines_noauth_user et domaines_nocache_user

6/06/2008