@@ -60,11 +60,16 @@ cp -f $danspath/init/dansguardian /etc/init.d/dansguardian
 $danspath/init_dans.py
 
 
-# Utilisation manage-amon comme shell pour amon
+# Utilisation manage-amon comme shell pour amon et amon2 s'il existe
 id amon &>/dev/null
 if [ $? -eq 0 ]
 then
 	usermod -s /usr/share/eole/manage-amon.sh amon
+fi
+id amon2 &>/dev/null
+if [ $? -eq 0 ]
+then
+	usermod -s /usr/share/eole/manage-amon.sh amon2
 fi
 echo
 if [ "$activer_log_distant" == "oui" -o "$activate_tls" == "oui" ]; then
